templates/default/styles.css
* {
	margin: 0;
	padding: 0;
}
html, body {
	font-size: 8pt;
	font-family: verdana, sans-serif;
	text-align: center;
	background-image: url(gfx/body_bg.png);
	background-color: #CCC;
	cursor: default;
	color: #000;
}
#pagebox-bg {
	width: 785px;
	background-image: url(gfx/pagebox_bg.png);
	background-repeat: repeat-x;
	background-color: #FFF;
	margin: 0 auto 0 auto;
}
#shadow-left {
	background-image: url(gfx/pageshadow_left.png);
	background-repeat: repeat-y;
	background-position: left;
}
#shadow-right {
	padding: 20px 30px 15px 30px;
	background-image: url(gfx/pageshadow_right.png);
	background-repeat: repeat-y;
	background-position: right;
}
a img {
	border: 0;
}
a:link, a:active, a:visited {
	color: #369;
	text-decoration: underline;
}
a:hover {
	color: #7F0000 !important;
	text-decoration: none;
}
a.administrator:link, a.administrator:active, a.administrator:visited {
	color: #B20000 !important;
}
a.moderator:link, a.moderator:active, a.moderator:visited {
	color: #0000B2 !important;
}
input, select, textarea {
	font-size: 8pt !important;
	font-family: verdana, sans-serif !important;
	background-color: #FFF;
}
input, textarea {
	padding: 2px;
	border: 1px solid silver;
}
select * {
	font-size: 8pt !important;
	font-family: verdana, sans-serif !important;
}
select option {
	padding: 0 5px 0 0;
}
textarea {
	width: 99%;
	font-size: 9pt !important;
}
textarea#tags-txtarea {
	/*
		fixes a strange bug in Firefox 1.0 making
		the box wider when hovering BBCode tags
	*/
	width: 98%;
}
input[type="submit"], input[type="reset"], input[type="button"] {
	padding: 0 10px 0 10px;
	cursor: pointer;
	font-weight: bold;
	color: #444;
	border-bottom: 2px solid silver;
}
label, input[type="radio"], input[type="checkbox"], select {
	cursor: pointer;
}
input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
	border-color: #369;
}
optgroup option {
	padding: 0 10px 0 10px;
}

pre.code {
	display: block;
	margin: 0 25px 0 25px;
	padding: 5px;
	font-family: monospace;
	color: #7F0000;
	background-color: #FFF;
	border: 1px solid #BFBFBF;
	overflow: auto;
	font-size: 8pt;
}
table.maintable pre.code {
	width: 502px;
	padding: 5px 5px 20px 5px;
}
html>body table.maintable pre.code {
	padding: 5px;
}
table.maintable blockquote.quote pre.code {
	width: 430px;
}

blockquote.quote {
	margin: 0 25px 0 25px;
	font-size: 8pt;
}
blockquote.quote .title {
	font-weight: bold;
	padding: 3px;
}
blockquote.quote .content {
	padding: 10px;
	color: #333;
	background-image: url(gfx/quote_bg.png);
	background-repeat: no-repeat;
	background-position: top right;
	background-color: #FFF;
	border: 1px solid #BFBFBF;
	overflow: auto;
}
hr {
	border: 0;
	border-top: 1px solid silver;
	padding: 6px;
}
#logo {
	float: left;
	height: 30px;
}
h1#boardname {
	text-align: right;
	font-size: 13pt;
	font-weight: bold;
	color: #369;
	line-height: 30px !important;
}
h1#boardname #line {
	padding: 0 0 2px 0;
	border-bottom: 2px solid #EBD6AD;
}
h2#boarddescr {
	text-align: right;
	font-size: 10pt;
	font-weight: normal;
	font-style: italic;
	color: #7F7F7F;
	line-height: 30px !important;
}
#topmenu * {
	text-align: left;
}
#topmenu {
	clear: both;
	float: left;
	width: 723px;
	background-image: url(gfx/topmenu_bg.png);
	background-repeat: repeat-x;
	background-color: #E8E8E8;
	border: 1px solid #369;
	padding: 3px 0 3px 0;
	margin: 5px 0 0 0;
}
#topmenu ul {
	list-style: none;
}
#topmenu ul li {
	display: inline;
}
#topmenu ul li a:link, #topmenu ul li a:visited, #topmenu ul li a:hover {
	text-decoration: none;
	padding: 3px 7px 3px 7px;
	border-right: 1px solid #369;
}
#topmenu ul li#logout a:link, #topmenu ul li#logout a:visited, #topmenu ul li#logout a:hover {
	border-right: 0;
	border-left: 1px solid #369;
}
#topmenu ul li a:link, #topmenu ul li a:visited {
	color: #369;
}
#topmenu ul li a:active, #topmenu ul li a:hover {
	color: #7F0000;
	background-image: url(gfx/topmenu_bg_reverse.png);
	background-repeat: repeat-x;
	background-color: #FFF;
}
#topmenu-shadow {
	clear: both;
	height: 5px;
	background-image: url(gfx/topmenu_shadow.png);
	background-repeat: repeat-x;
	background-color: #FFF;
	line-height: 100%;
	overflow: hidden;
	margin: 0 0 15px 0;
	width: 100%; /* Be nice to Safari */
}
p.locationbar {
	clear: both;
	text-align: left;
	font-style: italic;
	color: #333;
	margin: -10px 0 10px 0;
	padding: 3px;
}
p.locationbar a {
	font-style: normal;
}

/* Global styles */

table.maintable, table.confirmform {
	clear: both;
	border-collapse: collapse;
	border-left: 1px solid silver;
	border-right: 1px solid silver;
	border-bottom: 1px solid silver;
	margin: 0 0 20px 0;
	width: 100%;
}
table.maintable th, table.confirmform th {
	color: #EBD6AD;
	font-weight: bold;
	background-color: #369;
	background-image: url(gfx/tableheadbg.gif);
	background-position: top;
	background-repeat: repeat-x;
	text-align: left;
	padding: 4px 6px 4px 6px;
	border-left: 1px solid silver;
	border-top: 1px solid silver;
	white-space: nowrap;
}
table.maintable td, table.confirmform td, td.msg {
	background-color: #EFEFEF;
	padding: 6px !important;
	text-align: left;
	border-left: 1px solid silver;
	border-top: 1px solid silver;
	vertical-align: middle;
}
table.maintable td a:visited {
	color: #555;
}
td.fieldtitle {
	background-color: #E8E8E8 !important;
	width: 25%;
	height: 1%;
	font-weight: bold;
}
td.formcontrols {
	background-color: #E8E8E8 !important;
	text-align: center !important;
	padding: 6px !important;
}
td.formcontrols input {
	font-weight: bold;
}
td.formcontrols a {
	color: #369 !important;
}
td.formcontrols .postformshortcut {
	margin-top: 5px;
	color: #666;
	font-size: 7pt;
}
table.maintable th.icon {
	width: 25px;
}
table.maintable td.icon {
	background-color: #E8E8E8;
	width: 25px;
}
table.maintable th.count, table.maintable td.count {
	width: 1%;
	text-align: center;
	white-space: nowrap;
}
table.maintable td.count {
	background-color: #E8E8E8;
	font-weight: bold;
	color: #333;
}
/* ... */

